--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,7 +2,7 @@
 FROM nginx:alpine
 
 # # Copy the custom nginx.conf to the Nginx configuration directory
-# COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf
 
 # # Copy build files to Nginx html directory
 # # COPY --from=build /app/dist /usr/share/nginx/html
